added some content

--- a/calculators-for-words.qmd
+++ b/calculators-for-words.qmd
@@ -17,6 +17,7 @@ bibliography: references.bib
 - Why are we here?
 - Why is the metaphor a problem?
 - Why continue this discussion?
+- bla bla XXX
 
 ## Aim
 
